--- a/aspPay/aspPay.csproj
+++ b/aspPay/aspPay.csproj
@@ -157,7 +157,9 @@
     </Compile>
     <Compile Include="Models\Data\DataB.cs" />
     <Compile Include="Models\Data\PageDtO.cs" />
+    <Compile Include="Models\Data\SideBarDtO.cs" />
     <Compile Include="Models\ViewModels\Pages\PageViewModel.cs" />
+    <Compile Include="Models\ViewModels\Pages\SideBarViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +186,7 @@
     <Content Include="Areas\Admin\Views\Pages\AddPage.cshtml" />
     <Content Include="Areas\Admin\Views\Pages\EditPage.cshtml" />
     <Content Include="Areas\Admin\Views\Pages\PageDetails.cshtml" />
+    <Content Include="Areas\Admin\Views\Pages\EditSideBar.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
